--- a/About us.html
+++ b/About us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Epic Arcade</title>
     <link rel="stylesheet" href="Styles/Aboutus.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="Styles/Reset.css" type="text/css">
