--- a/Accessories.html
+++ b/Accessories.html
@@ -47,7 +47,7 @@
 
         <div class="game-card1">
             <div class="game-image1">
-                <img src="Images/Consol.jpeg" alt="Game Image">
+                <img src="Images/Consol.jpg" alt="Game Image">
                 <div class="game-details1">
                     <p>At Epic Arcade, we have the best gaming peripherals to make your gaming more fun and exciting! 
                     <br>From keyboards and mice to headsets and controllers. 
