--- a/Upcoming.html
+++ b/Upcoming.html
@@ -139,7 +139,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image13.1.jpg" alt="Game Image">
+        <img src="Image/13.png" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 July</p>
             <p>Genre: Action/Survival</p>
@@ -152,7 +152,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image13.1.png" alt="Game Image">
+        <img src="Images/image13.1.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025/Q4</p>
             <p>Genre: Action/Survival/fantasy</p>
