--- a/Upcoming.html
+++ b/Upcoming.html
@@ -63,7 +63,7 @@
       <section class="row_1">
         <div class="game-card">
           <div class="game-image">
-              <img src="Images/image20.1.png" alt="Game Image">
+              <img src="Images/image201.png" alt="Game Image">
               <div class="game-details">
                   <p>Release Date: 2025</p>
                   <p>Genre: Action / Adventure</p>
@@ -75,7 +75,7 @@
         </div>
         <div class="game-card">
           <div class="game-image">
-              <img src="Images/image19.1.jpg" alt="Game Image">
+              <img src="Images/image191.jpg" alt="Game Image">
               <div class="game-details">
                   <p>Release Date: 2025/Q4</p>
                   <p>Genre: Simulation/ Stratergy</p>
@@ -89,7 +89,7 @@
   
       <div class="game-card">
         <div class="game-image">
-            <img src="Images/image14.1.jpg" alt="Game Image">
+            <img src="Images/image141.jpg" alt="Game Image">
             <div class="game-details">
                 <p>Release Date: 2025</p>
                 <p>Genre: Action/Adventure/Fantasy</p>
@@ -102,7 +102,7 @@
   
     <div class="game-card">
       <div class="game-image">
-          <img src="Images/pi.1.jpg" alt="Game Image" height=px">
+          <img src="Images/pi1.jpg" alt="Game Image" height=px">
           <div class="game-details">
               <p>Release Date: 2026</p>
               <p>Genre: Action/Adveture/stratergy</p>
@@ -114,7 +114,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image18.1.jpg" alt="Game Image">
+        <img src="Images/image181.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025/Q2</p>
             <p>Genre:Drama/Adventure</p>
@@ -126,7 +126,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/imge17.1.png" alt="Game Image">
+        <img src="Images/imge171.png" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025</p>
             <p>Genre: Action/fantasy/Science Fiction</p>
@@ -152,7 +152,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image13.1.jpg" alt="Game Image">
+        <img src="Images/image131.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025/Q4</p>
             <p>Genre: Action/Survival/fantasy</p>
@@ -164,7 +164,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image16.1.png" alt="Game Image">
+        <img src="Images/image161.png" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 December</p>
             <p>Genre:Fantasy/Adventure</p>
@@ -176,7 +176,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image15.1.jpg" alt="Game Image">
+        <img src="Images/image151.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025/Q1</p>
             <p>Genre: Role-Playing/Adventure</p>
