--- a/Upcoming.html
+++ b/Upcoming.html
@@ -47,7 +47,7 @@
       <div class="hero-container">
     <div class="hero-slide show">
   <img src="Images/image19.jpg" alt="gamepic" class="hero-image">
-  <img src="Images/pi.png" alt="gamepic" class="hero-image">
+  <img src="Images/pi.jpg" alt="gamepic" class="hero-image">
   <img src="Images/image12.png" alt="gamepic" class="hero-image">
   <img src="Images/image13.jpg" alt="gamepic" class="hero-image">
     </div>
@@ -63,7 +63,7 @@
       <section class="row_1">
         <div class="game-card">
           <div class="game-image">
-              <img src="Images/image201.png" alt="Game Image">
+              <img src="Images/image201.jpg" alt="Game Image">
               <div class="game-details">
                   <p>Release Date: 2025</p>
                   <p>Genre: Action / Adventure</p>
@@ -126,7 +126,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/imge171.png" alt="Game Image">
+        <img src="Images/imge171.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025</p>
             <p>Genre: Action/fantasy/Science Fiction</p>
@@ -139,7 +139,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Image/13.png" alt="Game Image">
+        <img src="Image/13.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 July</p>
             <p>Genre: Action/Survival</p>
@@ -164,7 +164,7 @@
   </div>
   <div class="game-card">
     <div class="game-image">
-        <img src="Images/image161.png" alt="Game Image">
+        <img src="Images/image161.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 December</p>
             <p>Genre:Fantasy/Adventure</p>
@@ -191,7 +191,7 @@
 <section class="row">
        <div class="game-card">
         <div class="game-image">
-            <img src="Images/image_card1.png" alt="Game Image">
+            <img src="Images/image_card1.jpg" alt="Game Image">
             <div class="game-details">
                 <p>Release Date: 2026</p>
                 <p>Genre: Action</p>
