--- a/Upcoming.html
+++ b/Upcoming.html
@@ -110,7 +110,7 @@
               <button class="buy-button">Pre Purchase</button>
           </div>
       </div>
-      <div class="game-title">Assaccin's creed Shadows</div>
+      <div class="game-title">Assassin's creed Shadows</div>
   </div>
   <div class="game-card">
     <div class="game-image">
