--- a/Upcoming.html
+++ b/Upcoming.html
@@ -48,7 +48,7 @@
     <div class="hero-slide show">
   <img src="Images/image19.jpg" alt="gamepic" class="hero-image">
   <img src="Images/pi.jpg" alt="gamepic" class="hero-image">
-  <img src="Images/image12.png" alt="gamepic" class="hero-image">
+  <img src="Images/image12.jpg" alt="gamepic" class="hero-image">
   <img src="Images/image13.jpg" alt="gamepic" class="hero-image">
     </div>
    </div>
@@ -139,7 +139,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Image/13.jpg" alt="Game Image">
+        <img src="Image/13.png" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 July</p>
             <p>Genre: Action/Survival</p>
