--- a/gamestore.html
+++ b/gamestore.html
@@ -128,7 +128,7 @@
       </div>
       <div class="game-card">
         <div class="game-image">
-            <img src="Images/blackmyth.png" alt="Game Image">
+            <img src="Images/blackmyth.jpg" alt="Game Image">
             <div class="game-details">
                 <p>Price:$25.00</p>
                 <p>Discounted Price:$18.00</p>
