--- a/Upcoming.html
+++ b/Upcoming.html
@@ -139,7 +139,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Image/13.jpg" alt="Game Image">
+        <img src="Image/image13.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 July</p>
             <p>Genre: Action/Survival</p>
