--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <section class="head">
             <div class="leftside">
-              <img src="Images/logo1.jpg" Width="100px" height="100px" class="logo">
+              <img src="Images/logo1.jpg"  class="logo">
             </div>
             <div class="rightside">
                 <nav class="HEADER">
