--- a/gamestore.html
+++ b/gamestore.html
@@ -14,7 +14,9 @@
     <header>
         <section class="head">
             <div class="leftside">
-              <img src="Images/logo1.jpg" Width="100px" height="100px" class="logo">
+                <div class="logo">
+                    <img src="Images/logo1.png">
+                </div>   
             </div>
             <div class="rightside">
                 <nav class="HEADER">
