--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <section class="head">
             <div class="leftside">
-              <img src="Images/logo1.jpg"  class="logo">
+                <div class="logo">
+                    <img src="Images/logo1.png">
+                </div>           
             </div>
             <div class="rightside">
                 <nav class="HEADER">
