fixed html and css code

--- a/About us.html
+++ b/About us.html
@@ -89,7 +89,7 @@
 <div class="main-container">
   <div class="image-container">
      <div class="image-slide">
-          <img src="Images/buildingangle1.webp" alt="Image 1">
+          <img src="Images/buildingangle1.jpg" alt="Image 1">
           <img src="Images/building.jpg" alt="Image 2">
           <img src="Images/building2.jpg" alt="Image 3">
       </div>
@@ -120,29 +120,29 @@
         </thead>
         <tbody>
             <tr>
-                <td data-label="Header 1"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.693725251744!2d79.84212147404864!3d6.927165418342811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25bcfdee7764d%3A0xdf97fbb66912b0c5!2sOne%20Galle%20Face%20Mall!5e0!3m2!1sen!2slk!4v1737873874045!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-                <td data-label="Header 2">Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
+                <td ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.693725251744!2d79.84212147404864!3d6.927165418342811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25bcfdee7764d%3A0xdf97fbb66912b0c5!2sOne%20Galle%20Face%20Mall!5e0!3m2!1sen!2slk!4v1737873874045!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                <td >Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
                   <br><p>Saturday: 10:00 AM – 4:00 PM (GMT+0)</p>
                   <br><p>Sunday: Closed.</p>
                   <br><p>Colombo.</p>
                 </td>
-                <td data-label="Header 3"><img src="Images/location1.webp" alt="Image 1"class="loimage"></td>
+                <td><img src="Images/location1.webp" alt="Image 1"class="loimage"></td>
             </tr>
             <tr>
-                <td data-label="Header 1"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.544717455133!2d80.63487547405128!3d7.2925259137512475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae36716a6000077%3A0x38a416343eff311d!2sKCC%20Multiplex!5e0!3m2!1sen!2slk!4v1737874008461!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-                <td data-label="Header 2">Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
+                <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.544717455133!2d80.63487547405128!3d7.2925259137512475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae36716a6000077%3A0x38a416343eff311d!2sKCC%20Multiplex!5e0!3m2!1sen!2slk!4v1737874008461!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                <td>Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
                   <br><p>Saturday: 10:00 AM – 4:00 PM (GMT+0)</p>
                   <br><p>Sunday: Closed.</p>
                   <br><p>Kandy.</p></td>
-                <td data-label="Header 3"><img src="Images/location2.jpg" alt="Image 2"class="loimage"></td>
+                <td><img src="Images/location2.jpg" alt="Image 2"class="loimage"></td>
             </tr>
             <tr>
-                <td data-label="Header 1"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.577776695274!2d80.20022377009757!3d6.05251281507542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae173ef4cc6b88d%3A0xd9c5ef5a5f92100b!2sRichmond%20College!5e0!3m2!1sen!2slk!4v1737874174200!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-                <td data-label="Header 2">Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
+                <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.577776695274!2d80.20022377009757!3d6.05251281507542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae173ef4cc6b88d%3A0xd9c5ef5a5f92100b!2sRichmond%20College!5e0!3m2!1sen!2slk!4v1737874174200!5m2!1sen!2slk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                <td>Monday –<p>Friday: 9:00 AM – 6:00 PM (GMT+0)</p> 
                   <br><p>Saturday: 10:00 AM – 4:00 PM (GMT+0)</p>
                   <br><p>Sunday: Closed.</p>
                    <br><p>Galle.</p></td>
-                <td data-label="Header 3"><img src="Images/location3.webp" alt="Image 3" class="loimage"></td>
+                <td><img src="Images/location3.webp" alt="Image 3" class="loimage"></td>
             </tr>
         </tbody>
         <tfoot>
