--- a/Upcoming.html
+++ b/Upcoming.html
@@ -141,7 +141,7 @@
   
   <div class="game-card">
     <div class="game-image">
-        <img src="Image/image13.jpg" alt="Game Image">
+        <img src="Images/image133.jpg" alt="Game Image">
         <div class="game-details">
             <p>Release Date: 2025 July</p>
             <p>Genre: Action/Survival</p>
@@ -380,12 +380,12 @@
         <input type="text" class="text-box" placeholder="Enter your email">
         <button class="subscribe-button">Subscribe</button>
     </div>
-  </div> 
-        </div>
-  <hr class=>
-  <p class="font3">Copyright © since 2020 – Epic Arcade.All rights reserved.</p>
-  </div>
+</div> 
+</div>
+</div>
+<hr>
+<p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
   </footer>   
-   
+
 </body>
 </html>
