--- a/Accessories.html
+++ b/Accessories.html
@@ -83,8 +83,8 @@
             <div class="game-image">
                 <img src="Images/merch3.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=50$</p>
+                    <p>Discounted Price=25$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -96,8 +96,8 @@
             <div class="game-image">
                 <img src="Images/merch4.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=35$</p>
+                    <p>Discounted Price=30$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -109,8 +109,8 @@
             <div class="game-image">
                 <img src="Images/merch5.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=135$</p>
+                    <p>Discounted Price=115$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -122,8 +122,8 @@
             <div class="game-image">
                 <img src="Images/merch6.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=44$</p>
+                    <p>Discounted Price=37$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -135,8 +135,8 @@
             <div class="game-image">
                 <img src="Images/merch7.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=65$</p>
+                    <p>Discounted Price=45$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -148,8 +148,8 @@
             <div class="game-image">
                 <img src="Images/merch8.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=235$</p>
+                    <p>Discounted Price=175$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -161,8 +161,8 @@
             <div class="game-image">
                 <img src="Images/merch9.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=10$</p>
+                    <p>Discounted Price=5$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
@@ -177,8 +177,8 @@
             <div class="game-image">
                 <img src="Images/merch13.jpg" alt="Game Image">
                 <div class="game-details">
-                    <p>Release Date: 2028</p>
-                    <p>Genre: Action</p>
+                    <p>Price=345$</p>
+                    <p>Discounted Price=300$</p>
                     <p class="rating">Rating: ★★★★☆</p>
                     <button class="buy-button">BUY NOW</button>
                 </div>
