--- a/Consoles.html
+++ b/Consoles.html
@@ -83,15 +83,15 @@
                   <div class="overlay">
                       <div class="overlay-content">
                           <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                          <span class="item-price"><br>Original Price: $29.99</span>
-                          <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                          <span class="item-price"><br>Original Price: $1999.99</span>
+                          <span class="item-discounted-price"><br>Discounted Price: $1899.99</span>
                           <span class="item-discount"><br>Discount: 33%</span>
                       </div>
                   </div>
               </div>
               <div class="item-details">
                   <h2 class="item-title">PS 5 Pro</h2>
-                  <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+                  <p class="item-description">The PlayStation 5 Pro (PS5 Pro) is Sony's latest enhancement to its gaming console lineup, offering significant improvements over the original PS5. Released on November 7, 2024, the PS5 Pro is designed to deliver superior graphics and performance for an enhanced gaming experience.</p>
                   <button class="add-to-cart">Add to Cart</button>
                   <button class="Buy">Buy Now</button>
               </div>
@@ -102,15 +102,15 @@
                 <div class="overlay">
                     <div class="overlay-content">
                         <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                        <span class="item-price"><br>Original Price: $29.99</span>
-                        <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                        <span class="item-price"><br>Original Price: $1500.99</span>
+                        <span class="item-discounted-price"><br>Discounted Price: $1100.99</span>
                         <span class="item-discount"><br>Discount: 33%</span>
                     </div>
                 </div>
             </div>
             <div class="item-details">
                 <h2 class="item-title">X Box S</h2>
-                <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+                <p class="item-description">The Xbox Series S is Microsoft's compact, all-digital gaming console, offering next-generation performance at an affordable price point. Designed for gamers who prefer digital downloads, it lacks a disc drive but provides access to a vast library of games through digital platforms.</p>
                 <button class="add-to-cart">Add to Cart</button>
                 <button class="Buy">Buy Now</button>
              </div>
@@ -121,15 +121,15 @@
               <div class="overlay">
                   <div class="overlay-content">
                       <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                      <span class="item-price"><br>Original Price: $29.99</span>
-                      <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                      <span class="item-price"><br>Original Price: $829.99</span>
+                      <span class="item-discounted-price"><br>Discounted Price: $719.99</span>
                       <span class="item-discount"><br>Discount: 33%</span>
                   </div>
               </div>
           </div>
           <div class="item-details">
               <h2 class="item-title">Nintendo Switch</h2>
-              <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+              <p class="item-description">The Nintendo Switch is a versatile gaming console that offers multiple play modes to suit different gaming preferences. It can be used in TV mode by docking the system to enjoy HD gaming on your television, in tabletop mode by flipping the stand to share the screen for multiplayer games, and in handheld mode by attaching the Joy-Con controllers to enjoy gaming on the go.</p>
               <button class="add-to-cart">Add to Cart</button>
               <button class="Buy">Buy Now</button>
           </div>
@@ -141,15 +141,15 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $749.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $699.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
         <h2 class="item-title">Meta Quest 3</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <p class="item-description">The Meta Quest 3 is Meta's latest virtual reality (VR) headset, offering significant advancements in performance, design, and mixed reality capabilities over its predecessors.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
