--- a/Peripherals.html
+++ b/Peripherals.html
@@ -83,14 +83,14 @@
                   <div class="overlay">
                       <div class="overlay-content">
                           <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                          <span class="item-price"><br>Original Price: $29.99</span>
-                          <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
-                          <span class="item-discount"><br>Discount: 33%</span>
+                          <span class="item-price"><br>Original Price: $1499.99</span>
+                          <span class="item-discounted-price"><br>Discounted Price: $1299.99</span>
+                          <span class="item-discount"><br>Discount: 3%</span>
                       </div>
                   </div>
               </div>
               <div class="item-details">
-                  <h2 class="item-title">Item Title</h2>
+                  <h2 class="item-title">PS 5 Pro</h2>
                   <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
                   <button class="add-to-cart">Add to Cart</button>
                   <button class="Buy">Buy Now</button>
@@ -103,15 +103,16 @@
               <div class="overlay">
                   <div class="overlay-content">
                       <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                      <span class="item-price"><br>Original Price: $29.99</span>
-                      <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
-                      <span class="item-discount"><br>Discount: 33%</span>
+                      <span class="item-price"><br>Original Price: $229.99</span>
+                      <span class="item-discounted-price"><br>Discounted Price: $114.50</span>
+                      <span class="item-discount"><br>Discount: 50%</span>
                   </div>
               </div>
           </div>
           <div class="item-details">
-              <h2 class="item-title">Item Title</h2>
-              <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+              <h2 class="item-title">Asus ROG Strix Scope II 96 Wireless:</h2>
+              <p class="item-description">Features: This keyboard offers a 96% layout, providing a compact form factor without sacrificing essential keys. It includes tri-mode connectivity (wired, 2.4GHz wireless, and Bluetooth) and boasts an impressive battery life of up to 1,500 hours with lighting turned off. 
+                .</p>
               <button class="add-to-cart">Add to Cart</button>
               <button class="Buy">Buy Now</button>
           </div>
@@ -122,15 +123,15 @@
             <div class="overlay">
                 <div class="overlay-content">
                     <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                    <span class="item-price"><br>Original Price: $29.99</span>
-                    <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
-                    <span class="item-discount"><br>Discount: 33%</span>
+                    <span class="item-price"><br>Original Price: $219.99</span>
+                    <span class="item-discounted-price"><br>Discounted Price: $119.99</span>
+                    <span class="item-discount"><br>Discount: 45%</span>
                 </div>
             </div>
         </div>
         <div class="item-details">
-            <h2 class="item-title">Item Title</h2>
-            <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+            <h2 class="item-title">Razer Basilisk V3 Pro 35K:</h2>
+            <p class="item-description"> A lightweight, wireless mouse with "next-gen" ergonomics, providing a comfortable feel and high-speed performance.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="Buy">Buy Now</button>
         </div>
@@ -142,14 +143,14 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $329.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $219.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
+        <h2 class="item-title">Logitech G923 TrueForce Racing Wheel</h2>
         <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
@@ -162,15 +163,15 @@
       <div class="overlay">
           <div class="overlay-content">
               <span class="item-rating">⭐⭐⭐⭐⭐</span>
-              <span class="item-price"><br>Original Price: $29.99</span>
-              <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+              <span class="item-price"><br>Original Price: $1129.99</span>
+              <span class="item-discounted-price"><br>Discounted Price: $1019.99</span>
               <span class="item-discount"><br>Discount: 33%</span>
           </div>
       </div>
   </div>
   <div class="item-details">
       <h2 class="item-title">Item Title</h2>
-      <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+      <p class="item-description">Provides realistic force feedback, high-quality materials, and accurate steering, making it an excellent entry point for sim racing enthusiasts.</p>
       <button class="add-to-cart">Add to Cart</button>
       <button class="Buy">Buy Now</button>
   </div>
@@ -184,15 +185,16 @@
       <div class="overlay">
           <div class="overlay-content">
               <span class="item-rating">⭐⭐⭐⭐⭐</span>
-              <span class="item-price"><br>Original Price: $29.99</span>
-              <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+              <span class="item-price"><br>Original Price: $999.99</span>
+              <span class="item-discounted-price"><br>Discounted Price: $800.99</span>
               <span class="item-discount"><br>Discount: 33%</span>
           </div>
       </div>
   </div>
   <div class="item-details">
-      <h2 class="item-title">Item Title</h2>
-      <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+      <h2 class="item-title">Thrustmaster T.Flight Rudder Pedals</h2>
+      <p class="item-description">Features: Self-centering rudder axis with a long range of travel for precise maneuvers. Compatible with PC and PlayStation systems.
+     <br>  Availability: Offered by TecRoot in Sri Lanka.</p>
       <button class="add-to-cart">Add to Cart</button>
       <button class="Buy">Buy Now</button>
   </div>
@@ -204,15 +206,15 @@
       <div class="overlay">
           <div class="overlay-content">
               <span class="item-rating">⭐⭐⭐⭐⭐</span>
-              <span class="item-price"><br>Original Price: $29.99</span>
-              <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
-              <span class="item-discount"><br>Discount: 33%</span>
+              <span class="item-price"><br>Original Price: $435.99</span>
+              <span class="item-discounted-price"><br>Discounted Price: $335.99</span>
+              <span class="item-discount"><br>Discount: 20%</span>
           </div>
       </div>
   </div>
   <div class="item-details">
-      <h2 class="item-title">Item Title</h2>
-      <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+      <h2 class="item-title">SteelSeries Arctis Nova Pro Wireless</h2>
+      <p class="item-description"> This headset offers exceptional sound quality, comfort, and versatility. It includes a multi-system connect feature, allowing seamless switching between devices, and boasts a long battery life. </p>
       <button class="add-to-cart">Add to Cart</button>
       <button class="Buy">Buy Now</button>
   </div>
@@ -231,8 +233,8 @@
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">MSI MPG 321URX QD-OLED</h2>
+        <p class="item-description">This monitor boasts a 4K resolution with a 240Hz refresh rate, delivering exceptional picture quality and smooth gameplay. It supports all common Variable Refresh Rate (VRR) formats and includes HDMI 2.1 bandwidth, making it ideal for modern gaming consoles and graphics cards.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
@@ -244,15 +246,15 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $529.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $419.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">Logitech G560 LIGHTSYNC</h2>
+        <p class="item-description">These speakers offer immersive sound with DTS:X Ultra surround sound and customizable RGB lighting that syncs with your games. They connect via USB, 3.5mm audio jack, and Bluetooth.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
@@ -264,15 +266,15 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $1229.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $1129.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">Somnium VR1</h2>
+        <p class="item-description">A high-end PC VR headset offering a resolution of 2880 x 2880 pixels per eye, a field of view of 130° horizontal and 105° vertical, and support for 72, 90, and 120 Hz refresh rates, with experimental 144 Hz.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
@@ -285,15 +287,15 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $399.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $349.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">Nvidia GeForce RTX 4070 Ti Super</h2>
+        <p class="item-description">Offers exceptional performance, often surpassing the RTX 3090, making it ideal for high-resolution gaming. Features DLSS 3 and Frame Generation technologies for enhanced visuals and smoother gameplay.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
@@ -311,8 +313,8 @@
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">Logitech C920x HD Pro Webcam</h2>
+        <p class="item-description">Offers Full HD 1080p video calling at 30 frames per second, clear stereo audio, and HD light correction. Compatible with Skype, Zoom, FaceTime, and more.</p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
@@ -324,15 +326,16 @@
         <div class="overlay">
             <div class="overlay-content">
                 <span class="item-rating">⭐⭐⭐⭐⭐</span>
-                <span class="item-price"><br>Original Price: $29.99</span>
-                <span class="item-discounted-price"><br>Discounted Price: $19.99</span>
+                <span class="item-price"><br>Original Price: $529.99</span>
+                <span class="item-discounted-price"><br>Discounted Price: $419.99</span>
                 <span class="item-discount"><br>Discount: 33%</span>
             </div>
         </div>
     </div>
     <div class="item-details">
-        <h2 class="item-title">Item Title</h2>
-        <p class="item-description">This is a brief description of the item. It highlights the key features and benefits.</p>
+        <h2 class="item-title">Secretlab TITAN Evo 2022 Series</h2>
+        <p class="item-description">Designed for gamers, creators, and hybrid workers, the TITAN Evo offers advanced ergonomic features with multiple patent-pending adjustments to support various tasks and postures. Its high-quality materials and customizable options make it a top choice for those seeking tailored comfort. 
+        </p>
         <button class="add-to-cart">Add to Cart</button>
         <button class="Buy">Buy Now</button>
     </div>
